--- a/random-users-infinite-scoll/package.json
+++ b/random-users-infinite-scoll/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "5.8.3",
     "@tanstack/react-query-devtools": "5.8.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
